tests/snapshots/system_global_tests__global_help_short.snap
---
source: tests/system_global_tests.rs
expression: text
---
Interactive development environment setup automation

Usage: bivvy [OPTIONS] [COMMAND]

Commands:
  run          Run setup workflow (default if no command specified)
  init         Initialize Bivvy configuration for a project
  add          Add a template step to the configuration
  status       Show current setup status
  list         List available steps and workflows
  templates    List available templates
  last         Show last run information
  history      Show execution history
  lint         Validate configuration files
  config       Show resolved configuration
  cache        Manage template cache
  feedback     Capture and manage feedback
  update       Check for and install updates
  completions  Generate shell completions
  help         Print this message or the help of the given subcommand(s)

Options:
  -c, --config <CONFIG>    Path to config file (overrides default .bivvy/config.yml)
  -p, --project <PROJECT>  Path to project root (overrides current directory)
  -v, --verbose            Show verbose output
  -q, --quiet              Minimal output
      --no-color           Disable colored output
      --debug              Enable debug logging
      --trust              Trust all remote extends URLs without prompting
  -h, --help               Print help
  -V, --version            Print version
