tests/snapshots/system_global_tests__subcommand_help_cache.snap
---
source: tests/system_global_tests.rs
expression: text
---
Manage template cache

Usage: bivvy cache [OPTIONS] <COMMAND>

Commands:
  list   List cached entries
  clear  Clear the cache
  stats  Show cache statistics
  help   Print this message or the help of the given subcommand(s)

Options:
  -c, --config <CONFIG>    Path to config file (overrides default .bivvy/config.yml)
  -p, --project <PROJECT>  Path to project root (overrides current directory)
  -v, --verbose            Show verbose output
  -q, --quiet              Minimal output
      --no-color           Disable colored output
      --debug              Enable debug logging
      --trust              Trust all remote extends URLs without prompting
  -h, --help               Print help
  -V, --version            Print version
