tests/snapshots/system_global_tests__subcommand_help_last.snap
---
source: tests/system_global_tests.rs
expression: text
---
Show last run information

Usage: bivvy last [OPTIONS]

Options:
  -c, --config <CONFIG>    Path to config file (overrides default .bivvy/config.yml)
      --json               Output as JSON
  -p, --project <PROJECT>  Path to project root (overrides current directory)
      --step <STEP>        Show details for specific step
      --all                Show all runs
  -v, --verbose            Show verbose output
      --output             Include command output
  -q, --quiet              Minimal output
      --no-color           Disable colored output
      --debug              Enable debug logging
      --trust              Trust all remote extends URLs without prompting
  -h, --help               Print help
  -V, --version            Print version
