tests/snapshots/system_global_tests__subcommand_help_lint.snap
---
source: tests/system_global_tests.rs
expression: text
---
Validate configuration files

Usage: bivvy lint [OPTIONS]

Options:
  -c, --config <CONFIG>    Path to config file (overrides default .bivvy/config.yml)
      --format <FORMAT>    Output format: human, json, sarif [default: human]
      --fix                Auto-fix simple issues
  -p, --project <PROJECT>  Path to project root (overrides current directory)
      --strict             Treat warnings as errors
  -v, --verbose            Show verbose output
  -q, --quiet              Minimal output
      --no-color           Disable colored output
      --debug              Enable debug logging
      --trust              Trust all remote extends URLs without prompting
  -h, --help               Print help
  -V, --version            Print version
